@@ -4,6 +4,8 @@
 + Added a feature to the `/unwarn` command - `/unwarn @Role <optional: reason>`. You are now able to unwarn all users within a role.
 + The `/warnleaderboard` command will now show users that are no longer on your server, but got warnings before they left.
 + The changelog will not be shown if the changelog.txt file could not be found.
++ Added the command `/randomwarn @User` and `/randomwarn @Role` to get a random warning from a single user, or a random user from a group.
++ Added the command `/randomwarn @User` and `/randomwarn @Role` to get a random unwarn from a single user, or a random user from a group.
 #%&
 Version 0.9.93:
 + Added a new command system for the server. That means for you: quicker command execution that's more stable and reliable
